# CookBookRS

./: .gitignore  Cargo.toml  README.md  html5validator_cfg.yaml  rustfmt.toml
.github/workflows/: ci.yml  lint.yml  rust-clippy.yml
cookbook_macros/: Cargo.toml  README.md
cookbook_macros/src/: lib.rs
src/: datatypes.rs  http_helper.rs  lib.rs  main.rs  tui.rs  wgui.rs
src/datatypes/: equipment.rs  filetypes.rs  ingredient.rs  recipe.rs  step.rs  tag.rs  unit_helper.rs
src/tui/: app.rs  choice_popup.rs  dropdown.rs  event.rs  key_handler.rs  keybinds.rs  style.rs  tui.rs  ui.rs
src/wgui/: browser.html  browser.rs  error_responses.rs  html_stubs.rs  http_helper.rs  media_responses.rs  recipe_editor.html  recipe_editor.rs  recipe_viewer.html  recipe_viewer.rs  root.html  root.rs  template.html
