[package]
name = "cookbook_macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = {version = "~1.0", features = ["proc-macro", "span-locations"]}
quote = "~1.0"
syn = {version = "~2.0", features = ["derive", "parsing", "printing", "clone-impls", "extra-traits", "proc-macro"]}
